# m1-orientationmanager

./: .gitignore  .gitmodules  CMakeLists.txt  M1-OrientationManager-Server.jucer  M1-OrientationManager.jucer  Makefile  README.md  VERSION  m1-orientationmanager.jucer
.github/ISSUE_TEMPLATE/: imu---headtracking-device-request.md
.github/workflows/: juce_ci.yml  workflow.yml
Client/: CMakeLists.txt  M1-Orientation-TestClient.jucer
Client/Resources/: CMakeLists.txt  README.md
Client/Source/: CMakeLists.txt  Main.cpp
Modules/: CMakeLists.txt
Modules/M1-OrientationManager-Watcher/: CMakeLists.txt  M1-OrientationManager-Watcher.jucer  README.md
Modules/M1-OrientationManager-Watcher/Source/: CMakeLists.txt  Main.cpp
Resources/: CMakeLists.txt  Info-App.plist  Info.plist  InnoSetup.iss  com.mach1.orientationmanager.plist  com.mach1.orientationserver.plist  com.mach1.spatial.orientationmanager.plist  entitlements.mac.plist  icon.icns  settings.json
Server/: CMakeLists.txt  M1-OrientationManager-Server.jucer
Server/Resources/: CMakeLists.txt
Server/Source/: CMakeLists.txt  Config.h  HardwareAbstract.h  HardwareSerial.h  M1OrientationOSCServer.h  MainComponent.h
Server/Source/Devices/: M1Interface.cpp
Source/: BLEDeviceMap.cpp  BLEDeviceMap.h  CMakeLists.txt  Config.h  HardwareAbstract.h  HardwareBLE.h  HardwareCamera.h  HardwareDeviceInfo.h  HardwareEmulator.h  HardwareOSC.h  HardwareSerial.h  M1OrientationDeviceOSCServer.h  M1OrientationDeviceServer.cpp  M1OrientationDeviceServer.h  M1OrientationHardwareAbstract.h  M1OrientationHardwareBluetooth.h  M1OrientationHardwareSerial.h  M1OrientationManager.cpp  M1OrientationManager.h  M1OrientationManagerService.h  M1OrientationOSCServer.cpp  M1OrientationOSCServer.h  M1OrientationService.h  Main.cpp  MainComponent.cpp  MainComponent.h  README.md
Source/Devices/: M1Interface.cpp  M1Interface.h  MetaWear.h  MetaWearInterface.cpp  MetaWearInterface.h  NxTrackerInterface.cpp  NxTrackerInterface.h  SupperwareInterface.cpp  SupperwareInterface.h  WitMotionInterface.cpp  WitMotionInterface.h
Watcher/: CMakeLists.txt
Watcher/Source/: CMakeLists.txt  Main.cpp
modules/: CMakeLists.txt
osc_client/: CMakeLists.txt  M1-OrientationOSC.jucer  README.md
osc_client/Resources/: CMakeLists.txt  InnoSetup.iss  M1-OrientationOSC.entitlements  settings.json
osc_client/Source/: CMakeLists.txt  Config.h  M1Checkbox.h  Main.cpp  MainComponent.cpp  MainComponent.h
server/: CMakeLists.txt  README.md
server/Resources/: CMakeLists.txt  icon-debug.icns  settings.json
server/Source/: CMakeLists.txt  HardwareCamera.h  HardwareOSC.h  M1OrientationOSCServer.cpp  M1OrientationOSCServer.h  Main.cpp  MainComponent.cpp
server/Source/Devices/: MetaWearInterface.h
test_client/: CMakeLists.txt  M1-Orientation-TestClient.jucer
test_client/Source/: Config.h  MainComponent.cpp  MainComponent.h
watcher/: CMakeLists.txt
watcher/Source/: Main.cpp
