option(PLUGIN_FONT "Set the plugin's primary text font" "AileronSemiBold.ttf")

if(EXISTS "Resources/ProximaNovaReg.ttf" AND NOT IS_DIRECTORY "Resources/ProximaNovaReg.ttf")
	set(FOUND_FONT ProximaNovaReg)
	set(FOUND_FONT_TYPE ttf)
    juce_add_binary_data(Resources NAMESPACE BinaryData SOURCES mach1logo.png ../Modules/m1_orientation_client/Resources/bluetooth_icon.png ../Modules/m1_orientation_client/Resources/tech_support_icon.png ../Modules/m1_orientation_client/Resources/wi-fi_icon.png ../Modules/m1_orientation_client/Resources/usb_icon.png ../Modules/m1_orientation_client/Resources/camera_icon.png ProximaNovaReg.ttf)
else()
	set(FOUND_FONT AileronSemiBold)
	set(FOUND_FONT_TYPE ttf)
    juce_add_binary_data(Resources NAMESPACE BinaryData SOURCES mach1logo.png ../Modules/m1_orientation_client/Resources/bluetooth_icon.png ../Modules/m1_orientation_client/Resources/tech_support_icon.png ../Modules/m1_orientation_client/Resources/wi-fi_icon.png ../Modules/m1_orientation_client/Resources/usb_icon.png ../Modules/m1_orientation_client/Resources/camera_icon.png AileronSemiBold.ttf)
endif()

set(PLUGIN_FONT "${FOUND_FONT}.${FOUND_FONT_TYPE}")
target_compile_definitions(${PLUGIN_NAME} PUBLIC PLUGIN_FONT="${PLUGIN_FONT}" LOCAL_FONT=${FOUND_FONT} LOCAL_FONT_TYPE=${FOUND_FONT_TYPE} BINARYDATA_FONT=BinaryData::${FOUND_FONT}_${FOUND_FONT_TYPE} BINARYDATA_FONT_SIZE=BinaryData::${FOUND_FONT}_${FOUND_FONT_TYPE}Size)
message(STATUS "Font: ${PLUGIN_FONT}")